--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/highLow.css" />
     <title>Street Craps</title>
@@ -11,7 +12,23 @@
     <!-- Section 1 -->
     <section></section>
 
-    <img id="rectangle" src="./assets/Rectangle 3.png" alt="">
+    <img id="rectangle" src="./assets/Rectangle 3.png" alt="" />
+
+    <!-- Buttons Container -->
+    <div class="btn-container">
+      <div>Street Craps 7/11</div>
+
+      <div class="game-controls">
+        <button><img id="btn-img-3dDice" src="./assets/image 3.png" alt="">Roll Dice</button>
+        <button><i class="fas fa-redo" style="color: #4f0082;"></i>Reset</button>
+
+
+        <!-- Player Status bar -->
+        <div>
+          <p>Status</p>
+        </div>
+      </div>
+    </div>
 
     <!-- Section 2 -->
     <section></section>
