worked on the button

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/highLow.css" />
     <title>Street Craps</title>
@@ -19,15 +22,16 @@
       <div>Street Craps 7/11</div>
 
       <div class="game-controls">
-        <button><img id="btn-img-3dDice" src="./assets/image 3.png" alt="">Roll Dice</button>
-        <button><i class="fas fa-redo" style="color: #4f0082;"></i>Reset</button>
-
-
-        <!-- Player Status bar -->
-        <div>
-          <p>Status</p>
-        </div>
+        <button>
+          <img id="btn-img-3dDice" src="./assets/image 3.png" alt="" />Roll Dice
+        </button>
+        <button><i class="fas fa-redo" style="color: #4f0082"></i>Reset</button>
       </div>
+    </div>
+
+    <!-- Player Status bar -->
+    <div class="status-container">
+      <p class="status-result">Status:</p>
     </div>
 
     <!-- Section 2 -->
