worked on player 1 box

--- a/index.html
+++ b/index.html
@@ -13,13 +13,22 @@
   </head>
   <body>
     <!-- Section 1 -->
-    <section></section>
+    <section id="sec-1">
+        <div id="player-1-box" class="player-box">
+            <img id="player-1-font" class="player-font" src="./assets/Player 1.png" alt="">
+            <img id="player-1-plbox-img" class="player-box-img" src="./assets/Group 12.png" alt="">
+        </div>
+
+        <div class="count-div">
+            <h2>00</h2>
+        </div>
+    </section>
 
     <img id="rectangle" src="./assets/Rectangle 3.png" alt="" />
 
     <!-- Buttons Container -->
     <div class="btn-container">
-      <div>Street Craps 7/11</div>
+      <div class="title-div"><i class="fas fa-road" style="color: #eff311;"></i>7/11 Street Craps</div>
 
       <div class="game-controls">
         <button>
@@ -35,7 +44,7 @@
     </div>
 
     <!-- Section 2 -->
-    <section></section>
+    <section id="sec-2"></section>
 
     <script src="./JavaScript/index.js"></script>
     <script src="./JavaScript/high_Low.js"></script>
