worked on dice and trying to position the dice back to initial state when inactive player

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   
         <div id="left-dice-div">
           <!-- Divs for the two dice under this comment -->
-          <div id="dice-container1">
+          <div class="dice-container1">
             <div id="dice-one" class="left-dice dice">
               <div class="face one">
                 <span class="dot center"></span>
@@ -88,7 +88,7 @@
           </div>
   
           <!-- Second Dice -->
-          <div id="dice-container2">
+          <div class="dice-container2">
             <div id="dice-two" class="right-dice dice">
               <div class="face one">
                 <span class="dot center"></span>
@@ -174,7 +174,7 @@
       
             <div id="right-dice-div">
               <!-- Divs for the two dice under this comment -->
-              <div id="dice-container1">
+              <div class="dice-container1">
                 <div id="dice-one" class="left-dice dice-R">
                   <div class="face one">
                     <span class="dot center"></span>
@@ -218,7 +218,7 @@
               </div>
       
               <!-- Second Dice -->
-              <div id="dice-container2">
+              <div class="dice-container2">
                 <div id="dice-two" class="right-dice dice-R">
                   <div class="face one">
                     <span class="dot center"></span>
