workerd om the bankroll

--- a/index.html
+++ b/index.html
@@ -27,18 +27,21 @@
          <!-- Section 1 -->
     <section class="section-1" id="sec-1">
         <div id="player-1-box" class="player-box">
-          <img
+          <h2 id="player1-header">Player 1</h2>
+          <!-- <img
             id="player-1-font"
             class="player-font"
             src="./assets/Player 1.png"
             alt=""
-          />
+          /> -->
           <img
             id="player-1-plbox-img"
             class="player-box-img"
             src="./assets/Group 12.png"
             alt=""
           />
+
+          <h3 id="BankRoll-h3" class="bankRoll-elm-left">Bankroll: $1000</h3>
         </div>
   
         <div class="count-div">
@@ -157,18 +160,20 @@
       <!-- Section 2 -->
       <section class="section-2" id="sec-2">
           <div id="player-2-box" class="player-box">
-              <img
+            <h2 id="player2-header">Player 2</h2>
+              <!-- <img
                 id="player-2-font"
                 class="player-font"
                 src="./assets/Player 2.png"
                 alt=""
-              />
+              /> -->
               <img
                 id="player-2-plbox-img"
                 class="player-box-img"
                 src="./assets/Group 12.png"
                 alt=""
               />
+              <h3 id="BankRoll-h-R" class="bankRoll-elm-right">Bankroll: $1000</h3>
             </div>
       
             <div class="count-div">
