worked on winner display a bit

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./css/highLow.css" />
     <link rel="stylesheet" href="./css/dice_style.css">
     <link rel="stylesheet" href="./css/active-inactive.css">
+    <link rel="stylesheet" href="./css/winner_display.css">
     <title>Street Craps</title>
   </head>
   <body>
@@ -156,6 +157,20 @@
       <div class="status-container">
         <p id="status" class="status-result">Status:</p>
       </div>
+
+      <!-- Winner -->
+      <div id="player1">
+        <!-- Player 1 info -->
+        <img id="trophy-player1" src="./assets/trophy 1.png" alt="trophy">
+        <img id="winner-image-1" src="./assets/Group 17.png" alt="Winner image" style="display: none;">
+      </div>
+      
+      <div id="player2">
+        <!-- Player 2 info -->
+        <img id="trophy-player2" src="./assets/trophy 1.png" alt="trophy">
+        <img id="winner-image-2" src="./assets/Group 17.png" alt="Winner image" style="display: none;">
+      </div>
+      <!-- End of winner -->
   
       <!-- Section 2 -->
       <section class="section-2" id="sec-2">
@@ -173,7 +188,7 @@
                 src="./assets/Group 12.png"
                 alt=""
               />
-              <h3 id="BankRoll-h-R" class="bankRoll-elm-right">Bankroll: $1000</h3>
+              <h3 id="BankRoll-h3-R" class="bankRoll-elm-right">Bankroll: $1000</h3>
             </div>
       
             <div class="count-div">
