worked on the winner display vector still need to update

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <div id="wrapper">
          <!-- Section 1 -->
     <section class="section-1" id="sec-1">
+      <!-- if winner vector -->
+      <img id="bg-win-vector-left" src="./assets/Vector.png" alt="winner-vector">
+      <!-- end of if winner vector -->
         <div id="player-1-box" class="player-box">
           <h2 id="player1-header">Player 1</h2>
           <!-- <img
@@ -174,6 +177,9 @@
   
       <!-- Section 2 -->
       <section class="section-2" id="sec-2">
+        <!-- if winner vector -->
+      <img id="bg-win-vector-right" src="./assets/Vector.png" alt="winner-vector">
+      <!-- end of if winner vector -->
           <div id="player-2-box" class="player-box">
             <h2 id="player2-header">Player 2</h2>
               <!-- <img
